--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 api.security.token.secret=${JWT_SECRET:meu_segredo}
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+#Configurações no Db4free
+#spring.datasource.url=jdbc:mysql://db4free.net:3306/williantestes
+#spring.datasource.username=willianbiazzi
+#spring.datasource.password=3570b36d
